Added search bar

--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 </head>
 <body>
     <div class="container">
-        <h2>Prochaine station</h2>
-        <div class="price">
-            <span id="price-label">€</span>
+        <form class="search" action="">
+            <label for="">Movies</label>
+            <input class="input" type="text">
+            <input type="submit">
+        </form>
+        <div class="container">
+            <ul class="movie-list">
         </div>
-        <ul class="list">
-
+        <ul>
+            <li class="movie-title"></li>
         </ul>
-        <h1>Test</h1>
 
     </div>
-
+    <script src='apikey.js'></script>
     <script src='index.js'></script>
 </body>
 </html> 
